--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,27 @@
   -webkit-text-size-adjust: none;
 }
 
+.control-border {
+    background-color: #fff;
+    border: 2px solid #fff;
+    border-radius: 3px;
+    box-shadow: 0 2px 6px rgba(0,0,0,.3);
+    cursor: pointer;
+    margin-bottom: 22px;
+    text-align: center;
+}
+
+.control-text {
+    color: rgb(25,25,25);
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 15px;
+    line-height: 38px;
+    padding-left: 5px;
+    padding-right: 5px;
+    height: 30px;
+    width: 245px;
+}
+
 
       html, body {
         height: 100%;
